fix: Fix password reset feature

--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,6 +1,6 @@
 Hi <%= @user.user_name %>
 
-You recently requested to reset your password for your account, use the token below to reset it. This password reset is only valid for the next 2 hours
+You recently requested to reset your password for your account, use the token below to reset it. This password reset token is only valid for the next 2 hours
 
 <%= @user.reset_password_token %>
 
