feat: Update mailer

--- a/app/views/item_mailer/reorder_email.html.erb
+++ b/app/views/item_mailer/reorder_email.html.erb
@@ -1,2 +1,7 @@
-<h1>Reorder needed for <%= @item.name %></h1>
-<p>The inventory count for <%= @item.name %> has reached the reorder level. Please reorder soon.</p>
+
+<div style="background-color: #f4f4f4; padding: 20px;">
+  <div style="background-color: #ffffff; margin: 50px auto 0 auto; max-width: 600px; padding: 20px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); border-radius: 8px;">
+    <h1>Reorder needed for <%= @item.name %></h1>
+    <p>The inventory count for <%= @item.name %> has reached the reorder level. Please reorder soon.</p>
+  </div>
+</div>
